objects/ssot__RegulatoryCodeRelation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Relation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObjectId__c</fullName>
        <label>Reference Object</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObjectName__c</fullName>
        <label>Reference Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeId__c</fullName>
        <label>Regulatory Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512777605_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeRelation_RegulatoryCod_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeRelation_RegulatoryCod_rel</relationshipLabel>
        <relationshipName>rel_1739512777605_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512794630_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeRelation_ReferenceObje_rel</label>
        <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeRelation_ReferenceObje_rel</relationshipLabel>
        <relationshipName>rel_1739512794630_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>